# CGAssignment

./: CMakeLists.txt
dependencies/glew/: CMakeLists.txt  glew.pc
src/assignment0/: Loader.cpp  Loader.h  camera.h  main.cpp
src/assignment1/: MatchStickMan.cpp  MatchStickMan.h  main.cpp
src/test/: main.cpp
src/utils/: LoadShaders.cpp  LoadShaders.h  Loader.cpp  Loader.h  camera.cpp  camera.h
